--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,20 @@ spring.profiles.active=default
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 
-spring.datasource.url=jdbc:h2:file:./table.sql
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:h2:file:./table.sql
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/yokudlela_table
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=yokudlela
+spring.datasource.password=yokudlela
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.liquibase.enabled=true
 
 logging.level.org.springframework=debug
 spring.jpa.show-sql=true
