docker containers working, data seed added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,8 @@ spring.profiles.active=default
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 
-#spring.datasource.url=jdbc:h2:file:./table.sql
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/yokudlela_table
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -25,5 +21,5 @@ logging.level.org.springframework=debug
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
-logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCrea.core.JdbcTemplate.torUtils=TRACE
