--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 	</dependencies>
 
 
@@ -112,7 +117,7 @@
 				</executions>
 			</plugin>
 
-			<!--<plugin>
+			<plugin>
 				<groupId>io.fabric8</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>0.43.0</version>
@@ -124,7 +129,7 @@
 					</authConfig>
 					<images>
 						<image>
-							<name>krisztian4dsoft/yokudlela-spring3</name>
+							<name>therealuhlarzoltan/yokudlela-spring3</name>
 							<build>
 								<dockerFileDir>${project.basedir}/src/main/resources/docker/</dockerFileDir>
 								<assembly>
@@ -137,7 +142,7 @@
 									<inline>
 										<files>
 											<file>
-												<source>${project.build.directory}/Yokudlela-01.jar</source>
+												<source>${project.build.directory}/yokudlela.jar</source>
 												<outputDirectory>./opt</outputDirectory>
 												<destName>table-spring.jar</destName>
 											</file>
@@ -147,13 +152,8 @@
 							</build>
 						</image>
 					</images>
-					&lt;!&ndash;                    <authConfig>
-                                            <username>${env.DOCKERHUB_USER}</username>
-                                            <password>${env.DOCKERHUB_PASSWORD}</password>
-                                        </authConfig>
-                    &ndash;&gt;
 				</configuration>
-			</plugin>-->
+			</plugin>
 
 			<plugin>
 				<groupId>org.liquibase</groupId>
