--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jackson.serialization.write_dates_as_timestamps=false
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/yokudlela_table
+spring.datasource.url=jdbc:postgresql://192.168.0.122:5432/yokudlela_table
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=yokudlela
 spring.datasource.password=yokudlela
@@ -19,7 +19,12 @@ spring.liquibase.enabled=true
 
 logging.level.org.springframework=debug
 spring.jpa.show-sql=true
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=TRACE
+logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.springframework.jdbc=TRACE
 logging.level.org.springframework.jdbc.core.StatementCrea.core.JdbcTemplate.torUtils=TRACE
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+
