--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jackson.serialization.write_dates_as_timestamps=false
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
 
-spring.datasource.url=jdbc:postgresql://192.168.0.122:5432/yokudlela_table
+spring.datasource.url=jdbc:postgresql://localhost:5432/yokudlela_table
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=yokudlela
 spring.datasource.password=yokudlela
@@ -17,14 +17,21 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.enabled=true
 
-logging.level.org.springframework=debug
-spring.jpa.show-sql=true
+logging.level.org.springframework=TRACE
 logging.level.org.hibernate.SQL=TRACE
-logging.level.org.hibernate.type=TRACE
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.jdbc=TRACE
-logging.level.org.springframework.jdbc.core.StatementCrea.core.JdbcTemplate.torUtils=TRACE
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.type=trace
+spring.jpa.properties.hibernate.format_sql=TRUE
+spring.jpa.properties.hibernate.type=TRUE
+
+
+# basic log level for all messages
+logging.level.org.hibernate=TRACE
+# SQL statements and parameters
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+# Statistics and slow queries
+logging.level.org.hibernate.stat=DEBUG
+logging.level.org.hibernate.SQL_SLOW=INFO
+# 2nd Level Cache
+logging.level.org.hibernate.cache=DEBUG
 
